--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentDetail.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/FormDepartmentDetail.cshtml
@@ -88,10 +88,8 @@ else
                 <div class="section-title mt-3" style="font-weight:bold">
                     <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                 </div>
-                <div class="card-body">
-                    <form action="#" class="dropzone dz-clickable" id="mydropzone">
-                        <div class="dz-default dz-message"><span>Tệp đính kèm</span></div>
-                    </form>
+                <div class="section-title mt-3" style="font-weight:bold">
+                    <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
                 </div>
                 <hr />
             </div>
