--- a/MonthlyStatement/Views/Home/Index.cshtml
+++ b/MonthlyStatement/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
             <source src="~/assets/img/video_Trim.mp4" type="video/mp4">
         </video>
         <div class="content" style="text-align: center">
-            <h1 style="font-size: 160px; color: #fff; font-weight: 600">Monthly Statement</h1>
+            <h1 style="font-size: 160px; color: #ffffff; font-weight: 600 ">Báo cáo tháng</h1>
             <a class="main__content-time" id="current-time" style="text-decoration: none; display: inline-block; color: rgb(255, 255, 255); font-size: 24px; top: 20px; padding: 14px 50px"></a>
         </div>
     </div>
