--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/Department.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/Department.cshtml
@@ -11,7 +11,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Danh sách báo cáo</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Danh sách báo cáo bộ môn</h4>
                         <div class="card-header-form">
                             <form>
                                 <div class="input-group">
