--- a/MonthlyStatement/Areas/Secretary/Views/CheckReportDepartment/Detail.cshtml
+++ b/MonthlyStatement/Areas/Secretary/Views/CheckReportDepartment/Detail.cshtml
@@ -1,7 +1,7 @@
-﻿@model  MonthlyStatement.Models.FormPersonalReport
+﻿@model  MonthlyStatement.Models.FormDepartmentReport
 @using MonthlyStatement.Models
 @{
-    ViewBag.Title = "PersonalDetail";
+    ViewBag.Title = "DepartmentDetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
     int i = 0;
     int j = 64;
@@ -9,10 +9,10 @@
 
     CP25Team04Entities models = new CP25Team04Entities();
     int idperiod = Model.report_period_id;
-    var form = models.PersonalReports.Where(p => p.report_period_id == idperiod);
+    var form = models.DepartmentReports.Where(p => p.report_period_id == idperiod);
     string emails = ViewBag.accID;
-    var formPer = models.PersonalReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(emails));
-    int per = formPer.First().personal_report_id;
+    var formPer = models.DepartmentReports.Where(p => p.report_period_id == idperiod && p.account_id.Equals(emails));
+    int per = formPer.First().department_report_id;
 }
 
 <section class="section">
@@ -21,13 +21,13 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo cá nhân</h4>
+                        <h4 class="text-white" style="font-size:1.75rem">Báo cáo nhân viên</h4>
                     </div>
                 </div>
                 <div class="col-12">
                     <div class="card">
                         <div class="card-body">
-                            @foreach (var items in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_lv == 1).ToList())
+                            @foreach (var items in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_lv == 1).ToList())
                             {
 
                                 i = 0;
@@ -38,7 +38,7 @@
 
                                 </div>
 
-                                foreach (var items_lv2 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
+                                foreach (var items_lv2 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items.category_id).ToList())
                                 {
                                     lstId += items_lv2.category_id + "-";
                                     i++;
@@ -52,30 +52,30 @@
                                                         <th>@(i). @items_lv2.Category.category_content</th>
                                                     </tr>
 
-                                                    @if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id).Count() > 0)
+                                                    @if (models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id).Count() > 0)
                                                     {
 
                                                         int inputIndex = 0;
-                                                        if (!models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
+                                                        if (!models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                                         {
-                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id && p.personal_report_id == per).ToList())
+                                                            foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id && p.department_report_id == per).ToList())
                                                             {
                                                                 inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex">
                                                                     <td>
-                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                        <input readonly type="text" value="@items_content.department_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
                                                                     </td>
                                                                 </tr>
                                                             }
                                                         }
                                                         else
                                                         {
-                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_lv2.form_personal_report_detail_id && p.personal_report_id == per).ToList())
+                                                            foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_lv2.form_department_report_detail_id && p.department_report_id == per).ToList())
                                                             {
                                                                 inputIndex++;
                                                                 <tr id="formInput-@items_lv2.category_id-@inputIndex" class="d-none">
                                                                     <td>
-                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
+                                                                        <input readonly type="text" value="@items_content.department_report_content" class="form-control" id="noidung-@items_lv2.category_id-@inputIndex">
                                                                     </td>
                                                                 </tr>
                                                             }
@@ -88,11 +88,11 @@
                                         </div>
 
                                     </div>
-                                    if (models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
+                                    if (models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Any(x => x.Category.category_of_id == items_lv2.category_id))
                                     {
                                         <div>
                                             <div class="section-title mt-0 row" style="margin-bottom:1px; padding-left:0.25rem">
-                                                @foreach (var items_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
+                                                @foreach (var items_lv3 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id).ToList())
                                                 {
                                                     <div class="col">
                                                         <table class="table table-bordered dataTable">
@@ -100,21 +100,21 @@
                                                                 <tr class="" style="max-width: 50px">
                                                                     <th>@items_lv3.Category.category_content</th>
                                                                 </tr>
-                                                                @{ var items_groupby = models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_personal_report_detail_id == x.form_personal_report_detail_id).GroupBy(x => x.form_personal_report_detail_id).ToList();}
+                                                                @{ var items_groupby = models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && items_lv3.form_department_report_detail_id == x.form_department_report_detail_id).GroupBy(x => x.form_department_report_detail_id).ToList();}
 
                                                                 @foreach (var item in items_groupby)
                                                                 {
-                                                                    foreach (var items_content_lv3 in models.FormPersonalReports.FirstOrDefault(f => f.report_period_id == idperiod).FormPersonalReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_personal_report_detail_id == item.Key).ToList())
+                                                                    foreach (var items_content_lv3 in models.FormDepartmentReports.FirstOrDefault(f => f.report_period_id == idperiod).FormDepartmentReportDetails.Where(x => x.Category.category_of_id == items_lv2.category_id && x.form_department_report_detail_id == item.Key).ToList())
                                                                     {
                                                                         int inputIndex = 0;
                                                                         inputIndex++;
-                                                                        if (models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id).Count() > 0)
+                                                                        if (models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_content_lv3.form_department_report_detail_id).Count() > 0)
                                                                         {
-                                                                            foreach (var items_content in models.PersonalReportDetails.Where(p => p.form_personal_report_detail_id == items_content_lv3.form_personal_report_detail_id && p.personal_report_id == per).ToList())
+                                                                            foreach (var items_content in models.DepartmentReportDetails.Where(p => p.form_department_report_detail_id == items_content_lv3.form_department_report_detail_id && p.department_report_id == per).ToList())
                                                                             {
                                                                                 <tr>
                                                                                     <td>
-                                                                                        <input readonly type="text" value="@items_content.personal_report_content" class="form-control" id="noidung-@items_content_lv3.category_id-@inputIndex">
+                                                                                        <input readonly type="text" value="@items_content.department_report_content" class="form-control" id="noidung-@items_content_lv3.category_id-@inputIndex">
                                                                                     </td>
                                                                                 </tr>
                                                                             }
@@ -144,46 +144,13 @@
                                     <div class="card-body">
 
                                         <div class="chat">
-                                            @foreach (var comment in models.Comments.Where(x => x.personal_report_id == per).ToList())
+                                            @foreach (var comment in models.Comments.Where(x => x.department_report_id == per).ToList())
                                             {
                                                 <div class="chat-header clearfix">
                                                     <img alt="image" src="~/assets/img/user.png" class="rounded-circle img-fluid">
                                                     <div class="chat-about">
                                                         <div class="chat-time form-inline">
                                                             <div class="chat-with" style="font-style:oblique">@models.AspNetUsers.FirstOrDefault(n => n.Id.Equals(comment.account_id)).Email</div>
-                                                            &emsp;
-                                                            @if (models.AspNetRoles.Count() < 1)
-                                                            {
-                                                                <div class="badge badge badge-shadow">Không có vai trò</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Quản trị viên"))
-                                                            {
-                                                                <div class="badge badge badge-dark">Quản trị viên</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Ban phòng khoa"))
-                                                            {
-                                                                <div class="badge badge badge-danger">Ban phòng khoa</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Thư ký"))
-                                                            {
-                                                                <div class="badge badge badge-warning">Thư ký</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Bộ môn"))
-                                                            {
-                                                                <div class="badge badge badge-info">Bộ môn</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Giảng viên"))
-                                                            {
-                                                                <div class="badge badge badge-success">Giảng viên</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Nhân viên"))
-                                                            {
-                                                                <div class="badge badge badge-success">Nhân viên</div>
-                                                            }
-                                                            else if (models.AspNetRoles.First().Name.Equals("Chưa cấp quyền"))
-                                                            {
-                                                                <div class="badge badge badge-primary">Chưa cấp quyền</div>
-                                                            }
                                                             &emsp;
                                                             @comment.comment_date
                                                         </div>
@@ -195,18 +162,24 @@
                                         </div>
                                         <hr />
                                         <h4>Viết bình luận .... <span class="fas fa-pen" style="font-size:1.2rem"></span></h4>
-                                        @using (Html.BeginForm("PostCommentPersonal", "Comments", FormMethod.Post))
+                                        @using (Html.BeginForm("PostComment", "CommentsDepartment", FormMethod.Post))
                                         {
                                             <input type="hidden" name="id" value="@per" />
                                             <div class="form-group">
                                                 <textarea class="form-control" name="CommentText" style="height:200px !important"></textarea>
                                             </div>
                                             <div class="text-right mt-3">
-                                                <button class="btn btn-primary" type="submit">
-                                                    Gửi
-                                                </button>
+                                                <button class="btn btn-primary" type="submit">Gửi</button>
                                             </div>
                                         }
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-md-12 text-right">
+                                        <a href="#" class="btn btn-icon icon-left btn-danger"><i class="fas fa-times"></i> Báo cáo lại</a>
+                                        <a href="#" class="btn btn-icon icon-left btn-success"><i class="fas fa-check"></i> Duyệt báo cáo</a>
                                     </div>
                                 </div>
                             </div>
