--- a/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffDetail.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffDetail.cshtml
@@ -136,6 +136,9 @@
                             <div class="section-title mt-3" style="font-weight:bold">
                                 <label>@(((char) (++j)).ToString()). MINH CHỨNG</label>
                             </div>
+                            <div class="section-title mt-3" style="font-weight:bold">
+                                <label>@(((char) (++j)).ToString()). BÌNH LUẬN</label>
+                            </div>
                             <hr />
                             <div class="col-12">
                                 <div class="card" style="background-color: #e9ecef">
