--- a/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
@@ -21,37 +21,38 @@
                                 Danh mục này đã được lưu vào biễu mẫu, vui lòng không chỉnh sửa!
                             </div>
                         }
-                        <div class="table-responsive">
-                            @using (Html.BeginForm("Edit", "Categories", FormMethod.Post, new { }))
+                    <div class="table-responsive">
+                        @using (Html.BeginForm("Edit", "Categories", FormMethod.Post, new { }))
 
-                            {
-                                @Html.HiddenFor(model => model.category_id)
-                                <div class="card-header"><b>Thông tin chi tiết</b></div>
-                                <div class="card-body" style="margin-top: 0.2rem">
-                                    @if (Model.category_of_id != null)
-                                    {
-                                        <div class="mb-3">
-                                            <label class="small mb-1">Chọn danh mục cha</label>
-                                            @Html.DropDownList("category_of_id", null, htmlAttributes: new { @class = "form-control" })
-                                        </div>
-                                    }
-                                    <!-- Form Group (Category Content)-->
+                        {
+                            @Html.HiddenFor(model => model.category_id)
+                            @Html.HiddenFor(model => model.category_lv)
+                            <div class="card-header"><b>Thông tin chi tiết</b></div>
+                            <div class="card-body" style="margin-top: 0.2rem">
+                                @if (Model.category_of_id != null)
+                                {
                                     <div class="mb-3">
-                                        <label class="small mb-1">Tên danh mục con</label>
-                                        @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control", type = "text", @required = "" } })
+                                        <label class="small mb-1">Chọn danh mục cha</label>
+                                        @Html.DropDownList("category_of_id", null, htmlAttributes: new { @class = "form-control" })
                                     </div>
-                                    <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                                        <button style="width:180px; color:white" type="submit" class="btn btn-primary">
-                                            Lưu
-                                        </button>
-                                        &emsp;
-                                        <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories", new { id = Model.category_id})">
-                                            Hủy
-                                        </a>
-                                    </div>
+                                }
+                                <!-- Form Group (Category Content)-->
+                                <div class="mb-3">
+                                    <label class="small mb-1">Tên danh mục con</label>
+                                    @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control", type = "text", @required = "" } })
                                 </div>
-                            }
-                        </div>
+                                <div style="text-align: center; margin-top:1.8rem" class="mb-3">
+                                    <button style="width:180px; color:white" type="submit" class="btn btn-primary">
+                                        Lưu
+                                    </button>
+                                    &emsp;
+                                    <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories", new { id = Model.category_id})">
+                                        Hủy
+                                    </a>
+                                </div>
+                            </div>
+                        }
+                    </div>
                     </div>
                 </div>
             </div>
