--- a/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/DepartmentReport/DepartmentReportEdit.cshtml
@@ -85,11 +85,15 @@
                                                                     }
                                                                     <tr hidden id="append-@itemss.category_id"></tr>
                                                                     <tr>
-                                                                        <td>
-                                                                            <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                        </td>
-                                                                        <td>
-                                                                            <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                        <td colspan="2">
+                                                                            <div class="row">
+                                                                                <div class="col">
+                                                                                    <button role="button" name="@itemss.category_id" id="xoanoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                </div>
+                                                                                <div class="col">
+                                                                                    <button role="button" name="@itemss.category_id" id="themnoidung-@itemss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                </div>
+                                                                            </div>
                                                                         </td>
                                                                     </tr>
                                                                 </tbody>
@@ -153,11 +157,15 @@
                                                                                 }
                                                                                 <tr hidden id="append-@itemsss.category_id"></tr>
                                                                                 <tr>
-                                                                                    <td>
-                                                                                        <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container"><i class="fas fa-times"></i></button>
-                                                                                    </td>
-                                                                                    <td>
-                                                                                        <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container"><i class="fas fa-plus-circle"></i></button>
+                                                                                    <td colspan="2">
+                                                                                        <div class="row">
+                                                                                            <div class="col">
+                                                                                                <button role="button" name="@itemsss.category_id" id="xoanoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-danger container" data-uppercatedelete='@itemss.category_id'><i class="fas fa-times"></i></button>
+                                                                                            </div>
+                                                                                            <div class="col">
+                                                                                                <button role="button" name="@itemsss.category_id" id="themnoidung-@itemsss.category_id" class="btn btn-icon btn-sm btn-success container" data-uppercateadd='@itemss.category_id'><i class="fas fa-plus-circle"></i></button>
+                                                                                            </div>
+                                                                                        </div>
                                                                                     </td>
                                                                                 </tr>
                                                                             </tbody>
@@ -179,30 +187,13 @@
                             </div>
 
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
-
-                            @*<div class="accordion">
-                                    <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
-                                        <h4>
-                                            @(((char) (++j)).ToString()). MINH CHỨNG
-                                        </h4>
-                                        <div class="card-header-action">
-                                            <a data-collapse="#panel-body-Z" class="btn btn-icon" href="#"><i class="fas fa-plus"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-body collapse" id="panel-body-Z" data-parent="#accordion" style="">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                                            </div>
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="minhChungFile" aria-describedby="inputGroupFileAddon01">
-                                                <label class="custom-file-label" for="inputGroupFile01">Chọn file minh chứng</label>
-                                            </div>
-                                            <p hidden id="validation-file" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                        </div>
-                                    </div>
-                                </div>*@
-
+                            <div class="section-title mt-3" style="font-weight:bold">
+                                <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="file" class="form-control" id="minhChungFile">
+                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                            </div>
                             <div class="text-right mt-3">
                                 <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
                             </div>
@@ -217,24 +208,56 @@
 
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
+    //Mapping nội dung
+    $('#idMappingContentBtn').on('click', function () {
+        var boxes = $('.mapping-checkbox');
+        boxes.each(function () {
+            var categoryid = $(this).val();
+            var mappingContent = $('.perDetailMapping-' + categoryid);
+            mappingContent.each(function () {
+                let inputCount = Number($('#dem-' + categoryid).val()) + 1;
+                var mappingId = $(this).data('id');
+                if ($('#mappingPer-' + mappingId).length == 0 && $('#checkboxMapping-' + categoryid).is(':checked')) {
+                    $('#append-' + categoryid).replaceWith('<tr id="formInput-' + categoryid + '-' + inputCount + '"><td colspan="2"><input readonly type="text" value="'
+                        + $(this).val() + '" class="form-control" id="noidung-' + categoryid + '-' + inputCount + '">'
+                        + '<p hidden id="validation-noidung-' + categoryid + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
+                        + '<input type="hidden" id="mappingPer-' + mappingId + '"/>'
+                        + '</td ></tr > <tr hidden id="append-' + categoryid + '"></tr>');
+                    $('#dem-' + categoryid).val(inputCount);
+                }
+                else if (!$('#checkboxMapping-' + categoryid).is(':checked')) {
+                    $('#formInput-' + categoryid + '-' + inputCount).remove();
+                    $('#dem-' + categoryid).val((inputCount - 1));
+                }
+            });
+        });
+    });
     //Thêm input
     $('[id^="themnoidung-"]').on('click', function (e) {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val()) + 1;
-        $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
-            + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
-            + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
-        $('#dem-' + id).val(inputCount);
-    });
-    $('[id^="xoanoidung-"]').on('click', function () {
-        let id = $(this).attr("name");
-        let inputCount = Number($('#dem-' + id).val());
-        if (inputCount > 1) {
-            $('#formInput-' + id + '-' + inputCount).remove();
-            $('#dem-' + id).val((inputCount - 1));
-        }
+        var upperCateAdd = $(this).data('uppercateadd');
+        $('[data-uppercateadd="' + upperCateAdd + '"]').each(function () {
+            var id = $(this).attr("name");
+            var inputCount = Number($('#dem-' + id).val()) + 1;
+            $('#append-' + id).replaceWith('<tr id="formInput-' + id + '-' + inputCount + '"><td colspan="2"><input type="text" class="form-control" placeholder="Nhập nội dung mục báo cáo" id="noidung-' + id + '-' + inputCount + '">'
+                + '<p hidden id="validation-noidung-' + id + '-' + inputCount + '" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>'
+                + '</td ></tr > <tr hidden id="append-' + id + '"></tr>');
+            $('#dem-' + id).val(inputCount);
+        });
     });
     //xóa input
+    $('[id^="xoanoidung-"]').on('click', function () {
+        var upperCateDelete = $(this).data('uppercatedelete');
+        $('[data-uppercatedelete="' + upperCateDelete + '"]').each(function () {
+            let id = $(this).attr("name");
+            let inputCount = Number($('#dem-' + id).val());
+            if (inputCount > 1) {
+                $('#formInput-' + id + '-' + inputCount).remove();
+                $('#dem-' + id).val((inputCount - 1));
+            }
+        });
+
+    });
+    //nút lưu báo cáo
     $('#btnSubmit').on('click', function () {
         var lstCate = $('#lstCategory').val().split('-');
         var datas = ""; //Chuỗi data phân tách nhau bởi các ký tự: idform1=noidung1-noidung2~idform2=noidung1-noidung2
@@ -268,7 +291,7 @@
 
         if (check == true) {
             var formData = new FormData();
-            //formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
+            formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
             formData.append("data", datas.substring(0, datas.length - 1));
             formData.append("reportperiodid", $('#report_period_id').val());
 
