--- a/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffReportEdit.cshtml
@@ -177,32 +177,16 @@
                             </div>
 
                             <input hidden id="lstCategory" value="@lstId.Substring(0, lstId.Length - 1)" />
-
-                            @*<div class="accordion">
-                                    <div class="card-header collapsed" role="button" data-toggle="collapse" data-target="" aria-expanded="false">
-                                        <h4>
-                                            @(((char) (++j)).ToString()). MINH CHỨNG
-                                        </h4>
-                                        <div class="card-header-action">
-                                            <a data-collapse="#panel-body-Z" class="btn btn-icon" href="#"><i class="fas fa-plus"></i></a>
-                                        </div>
-                                    </div>
-                                    <div class="accordion-body collapse" id="panel-body-Z" data-parent="#accordion" style="">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <span class="input-group-text" id="inputGroupFileAddon01">Upload</span>
-                                            </div>
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" id="minhChungFile" aria-describedby="inputGroupFileAddon01">
-                                                <label class="custom-file-label" for="inputGroupFile01">Chọn file minh chứng</label>
-                                            </div>
-                                            <p hidden id="validation-file" class="text-danger" style="font-size: 12px; margin-left: 2px; margin-bottom: -15px"></p>
-                                        </div>
-                                    </div>
-                                </div>*@
-
+                            <div class="section-title mt-3" style="font-weight:bold">
+                                <label>@(((char)(++j)).ToString()). MINH CHỨNG</label>
+                            </div>
+                            <div class="input-group mb-3">
+                                <input type="file" class="form-control" id="minhChungFile">
+                                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                            </div>
                             <div class="text-right mt-3">
                                 <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
+                                @*<a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailStaffAsync","NotificationStaff")">Lưu báo cáo</a>*@
                             </div>
                         </div>
                     </div>
@@ -267,7 +251,7 @@
 
         if (check == true) {
             var formData = new FormData();
-            //formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
+            formData.append("fileMinhChung", $('#minhChungFile')[0].files[0]);
             formData.append("data", datas.substring(0, datas.length - 1));
             formData.append("reportperiodid", $('#report_period_id').val());
             console.log(datas.substring(0, datas.length - 1));
