--- a/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/FormDepartmentReport/Index.cshtml
@@ -21,7 +21,7 @@
 }
 @if (Session["faculty"] == null)
 {
-    <div class="#" role="alert">
+    <div class="" role="alert">
         Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
 
     </div>
@@ -510,6 +510,7 @@ else
         });
     });
 </script>
+
 <style>
     img.cangiua {
         display: block;
